# expert-vs-llm-antiaging

./: .gitignore  README.md  pyproject.toml  reproduce_tables.py
data/: RecsAssessByExperts2025.xlsx
src/antiaging_experiments/: __init__.py  cli.py  constants.py  grouping.py  io.py  pipeline.py  plots.py  reliability.py  tables.py
tests/: test_grouping.py  test_reliability.py
