[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiaging-experiments"
version = "0.1.0"
description = "Reproducible analysis pipeline for expert-vs-LLM anti-aging recommendation experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
antiaging-experiments = "antiaging_experiments.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
